# repo-analyze

./: .env.example  CLAUDE.md  README.md  pyproject.toml
repo_analyze/: analyzer.py  cli.py  fetcher.py  reporter.py  stats.py
tests/: test_analyzer.py  test_fetcher.py  test_reporter.py  test_stats.py
